Removing overflow-x to fix position sticky issues

--- a/_sass/core/theme.scss
+++ b/_sass/core/theme.scss
@@ -1,5 +1,4 @@
 #wrapper {
-  overflow-x: hidden;
   #main_content {
     ul {
       list-style: none;
